--- a/index.html
+++ b/index.html
@@ -478,6 +478,14 @@ body, #sidebar, #basemap-switcher {
   bottom: auto;
   z-index: 20;
 }
+
+@media (max-width: 600px) {
+  .status-icon {
+    transform: scale(0.33);
+    transform-origin: top left;
+  }
+}
+
 .checkmark-obrys {
   filter: drop-shadow(0 0 0.5px black) drop-shadow(1px 1px 0 black) drop-shadow(-1px -1px 0 black);
   border-radius: 2px;
