--- a/index.html
+++ b/index.html
@@ -469,7 +469,6 @@ body, #sidebar, #basemap-switcher {
  top: -1px;
   bottom: auto;
   z-index: 20;
-  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000, 0 0 1px #000;
   filter: drop-shadow(0 0 0.5px black) drop-shadow(1px 1px 0 black) drop-shadow(-1px -1px 0 black);
 }
 
@@ -916,8 +915,8 @@ function slugify(str) {
       {key: 'doSprawdzenia', label: 'Do sprawdzenia ❔', matches: p => p.doSprawdzenia},
       {key: 'zwiedzone', label: 'Zwiedzone <img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Green_check.svg" width="16" height="16" class="checkmark-obrys">', matches: p => p.zwiedzone},
       {key: 'wyroznione', label: 'Wyróżnione ⭐', matches: p => p.wyroznione},
-      {key: 'zamkniete', label: 'Zamknięte 🔐', matches: p => p.zamkniete},
-      {key: 'tajne', label: 'Tajne 🤫', matches: p => p.tajne}
+      {key: 'zamkniete', label: 'Zamknięte 🔒', matches: p => p.zamkniete},
+      {key: 'tajne', label: 'Tajne 🤐', matches: p => p.tajne}
     ];
     let selectedStatuses = new Set();
     const layerDocs = {};
@@ -1146,9 +1145,9 @@ if (pinBtn) pinBtn.addEventListener("click", () => selectTool("pin"));
       const statusIcon = (status.nieaktywne || status.niedostepne)
         ? `<span class="${statusClass}">⛔</span>`
         : status.zamkniete
-          ? `<span class="${statusClass}">🔐</span>`
+          ? `<span class="${statusClass}">🔒</span>`
           : status.tajne
-            ? `<span class="${statusClass}">🤫</span>`
+            ? `<span class="${statusClass}">🤐</span>`
             : status.doSprawdzenia
               ? `<span class="${statusClass}">❔</span>`
               : (status.zwiedzone || isVisitedLayer)
@@ -1309,8 +1308,8 @@ function emojiHtml(str) {
         </div>` : '';
       const statusHtml = `
         ${(p.niedostepne || p.nieaktywne) ? `<div style="opacity:0.8;">Niedostępne ⛔</div>` : ''}
-        ${p.zamkniete ? `<div style="opacity:0.8;">Zamknięte 🔐</div>` : ''}
-        ${p.tajne ? `<div style="opacity:0.8;">Tajne 🤫</div>` : ''}
+        ${p.zamkniete ? `<div style="opacity:0.8;">Zamknięte 🔒</div>` : ''}
+        ${p.tajne ? `<div style="opacity:0.8;">Tajne 🤐</div>` : ''}
         ${p.doSprawdzenia ? `<div style="opacity:0.8;">Do sprawdzenia ❔</div>` : ''}
         ${p.zwiedzone ? `<div style="opacity:0.8;">Zwiedzone <img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Green_check.svg" width="16" height="16" class="checkmark-obrys"></div>` : ''}
         ${p.wyroznione ? `<div style="opacity:0.8;">Wyróżnione ⭐</div>` : ''}`;
@@ -1838,8 +1837,8 @@ function zaladujPinezkiZFirestore() {
       return `
         <div class="status-grid">
           <label><input type="checkbox" id="${prefix}nieaktywne${suffix}" ${status.nieaktywne ? 'checked' : ''}> Niedostępne <span class="status-emoji">⛔</span></label>
-          <label><input type="checkbox" id="${prefix}zamkniete${suffix}" ${status.zamkniete ? 'checked' : ''}> Zamknięte <span class="status-emoji">🔐</span></label>
-          <label><input type="checkbox" id="${prefix}tajne${suffix}" ${status.tajne ? 'checked' : ''}> Tajne <span class="status-emoji">🤫</span></label>
+          <label><input type="checkbox" id="${prefix}zamkniete${suffix}" ${status.zamkniete ? 'checked' : ''}> Zamknięte <span class="status-emoji">🔒</span></label>
+          <label><input type="checkbox" id="${prefix}tajne${suffix}" ${status.tajne ? 'checked' : ''}> Tajne <span class="status-emoji">🤐</span></label>
           <label><input type="checkbox" id="${prefix}doSprawdzenia${suffix}" ${status.doSprawdzenia ? 'checked' : ''}> Do sprawdzenia <span class="status-emoji">❔</span></label>
           <label><input type="checkbox" id="${prefix}zwiedzone${suffix}" ${status.zwiedzone ? 'checked' : ''}> Zwiedzone <img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Green_check.svg" class="status-emoji checkmark-obrys"></label>
           <label><input type="checkbox" id="${prefix}wyroznione${suffix}" ${status.wyroznione ? 'checked' : ''}> Wyróżnione <span class="status-emoji">⭐</span></label>
@@ -3730,8 +3729,8 @@ function confirmLayerDelete() {
       </div>
       <div class="status-grid">
         <label><input type="checkbox" id="mobilePinInactive"> Niedostępne ⛔</label>
-        <label><input type="checkbox" id="mobilePinClosed"> Zamknięte 🔐</label>
-        <label><input type="checkbox" id="mobilePinSecret"> Tajne 🤫</label>
+        <label><input type="checkbox" id="mobilePinClosed"> Zamknięte 🔒</label>
+        <label><input type="checkbox" id="mobilePinSecret"> Tajne 🤐</label>
         <label><input type="checkbox" id="mobilePinTodo"> Do sprawdzenia ❔</label>
         <label><input type="checkbox" id="mobilePinVisited"> Zwiedzone <img src="https://upload.wikimedia.org/wikipedia/commons/0/03/Green_check.svg" width="16" height="16" class="checkmark-obrys"></label>
         <label><input type="checkbox" id="mobilePinHighlighted"> Wyróżnione ⭐</label>
